--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
