--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>JavaScript</title>
 </head>
 <body>
+<p id="text1" onclick="changeColor()">Text 1</p>
+<p id="text2" onclick="changeColor()">Text 2</p>
+<p id="text3" onclick="changeColor()">Text 3</p>
 <script type="module" src="main.js"></script>
 </body>
 </html>
