--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript</title>
-</head>
-<body>
-<p id="text1" >Text 1</p>
-<p id="text2" onclick="changeColor(this)">Text 2</p>
-<p id="text3" onclick="changeColor(this)">Text 3</p>
-<script type="module" src="main.js"></script>
-</body>
+  </head>
+  <body>
+    <p id="text1">Text 1</p>
+    <p id="text2">Text 2</p>
+    <p id="text3">Text 3</p>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="lesson-4.js"></script>
+    <!--<script type="module" src="lesson-5.js"></script>-->
+  </body>
 </html>
