--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p id="text1">Text 1</p>
     <p id="text2">Text 2</p>
     <p id="text3">Text 3</p>
-    <script type="module" src="main.js"></script>
-    <script type="module" src="lesson-4.js"></script>
-    <!--<script type="module" src="lesson-5.js"></script>-->
+<!--    <script type="module" src="main.js"></script>-->
+<!--    <script type="module" src="lesson-4.js"></script>-->
+    <script type="module" src="lesson-5.js"></script>
   </body>
 </html>
