--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <!--    <script type="module" src="main.js"></script>-->
 <!--    <script type="module" src="lesson-4.js"></script>-->
     <script type="module" src="lesson-5.js"></script>
+<!--    <script type="module" src="lesson-6.js"></script>-->
   </body>
 </html>
