--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!--    <script type="module" src="main.js"></script>-->
     <!--    <script type="module" src="lesson-4.js"></script>-->
     <!--    <script type="module" src="lesson-5.js"></script>-->
-<!--        <script type="module" src="lesson-6.js"></script>-->
-    <script type="module" src="lesson-7.js"></script>
+    <!--     <script type="module" src="lesson-6.js"></script>-->
+    <!--    <script type="module" src="lesson-7.js"></script>-->
+    <script type="module" src="lesson-8 part1.js"></script>
+    <script type="module" src="lesson-8 part2.js"></script>
   </body>
 </html>
