added task knowledge-check

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <p id="text1">Text 1</p>
     <p id="text2">Text 2</p>
     <p id="text3">Text 3</p>
-    <!--    <script type="module" src="main.js"></script>-->
-    <!--    <script type="module" src="lesson-4.js"></script>-->
-    <!--    <script type="module" src="lesson-5.js"></script>-->
-    <!--     <script type="module" src="lesson-6.js"></script>-->
+    <!--        <script type="module" src="main.js"></script>-->
+    <!--        <script type="module" src="lesson-4.js"></script>-->
+    <!--        <script type="module" src="lesson-5.js"></script>-->
+    <!--         <script type="module" src="lesson-6.js"></script>-->
     <!--    <script type="module" src="lesson-7.js"></script>-->
-    <script type="module" src="lesson-8 part1.js"></script>
-    <script type="module" src="lesson-8 part2.js"></script>
+    <!--        <script type="module" src="lesson-8 part1.js"></script>-->
+    <!--        <script type="module" src="lesson-8 part2.js"></script>-->
+    <script type="module" src="knowledge-check part1.js"></script>
+    <script type="module" src="knowledge-check part2.js"></script>
   </body>
 </html>
