corrected lint-mistakes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!--    <script type="module" src="lesson-7.js"></script>-->
     <!--        <script type="module" src="lesson-8 part1.js"></script>-->
     <!--        <script type="module" src="lesson-8 part2.js"></script>-->
-    <script type="module" src="knowledge-check part1.js"></script>
-    <script type="module" src="knowledge-check part2.js"></script>
+<!--    <script type="module" src="knowledge-check part1.js"></script>-->
+<!--    <script type="module" src="knowledge-check part2.js"></script>-->
+    <script type="module" src="lesson-9.js"></script>
   </body>
 </html>
