--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Trip House</title>
   </head>
   <body>
@@ -200,49 +200,49 @@
             </div>
 
             <div class="main__homes--hotel">
-              <figure class="main__russia col-s-6 col-m-4">
-                <img src="./images/png/hotel_leopold.png" alt="hotel_leopold" />
-                <figcaption class="main__name--img">
-                  <a href="#" class="nav__link--country">Hotel Leopold</a>
-                  <a href="#" class="main__name--country"
-                    >Saint Petersburg, Russia</a
-                  >
-                </figcaption>
-              </figure>
+<!--              <figure class="main__russia main__homes&#45;&#45;element col-s-6 col-m-4">-->
+<!--                <img src="./images/png/hotel_leopold.png" alt="hotel_leopold" />-->
+<!--                <figcaption class="main__name&#45;&#45;img">-->
+<!--                  <a href="#" class="nav__link&#45;&#45;country">Hotel Leopold</a>-->
+<!--                  <a href="#" class="main__name&#45;&#45;country"-->
+<!--                    >Saint Petersburg, Russia</a-->
+<!--                  >-->
+<!--                </figcaption>-->
+<!--              </figure>-->
 
-              <figure class="main__spain--homes col-s-6 col-m-4">
-                <img
-                  src="./images/png/apartment_sunshine.png"
-                  alt="apartment_sunshine"
-                />
-                <figcaption class="main__name--img">
-                  <a href="#" class="nav__link--country"> Apartment Sunshine</a>
-                  <a href="#" class="main__name--country">
-                    Santa Cruz de Tenerife, Spain</a
-                  >
-                </figcaption>
-              </figure>
+<!--              <figure class="main__spain&#45;&#45;homes main__homes&#45;&#45;element col-s-6 col-m-4">-->
+<!--                <img-->
+<!--                  src="./images/png/apartment_sunshine.png"-->
+<!--                  alt="apartment_sunshine"-->
+<!--                />-->
+<!--                <figcaption class="main__name&#45;&#45;img">-->
+<!--                  <a href="#" class="nav__link&#45;&#45;country"> Apartment Sunshine</a>-->
+<!--                  <a href="#" class="main__name&#45;&#45;country">-->
+<!--                    Santa Cruz de Tenerife, Spain</a-->
+<!--                  >-->
+<!--                </figcaption>-->
+<!--              </figure>-->
 
-              <figure class="main__slowakia col-m-4">
-                <img src="./images/png/villa_kunerad.png" alt="villa_kunerad" />
-                <figcaption class="main__name--img">
-                  <a href="#" class="nav__link--country">Villa Kunerad</a>
-                  <a href="#" class="main__name--country"
-                    >Vysokie Tatry, Slowakia</a
-                  >
-                </figcaption>
-              </figure>
+<!--              <figure class="main__slowakia main__homes&#45;&#45;element col-m-4">-->
+<!--                <img src="./images/png/villa_kunerad.png" alt="villa_kunerad" />-->
+<!--                <figcaption class="main__name&#45;&#45;img">-->
+<!--                  <a href="#" class="nav__link&#45;&#45;country">Villa Kunerad</a>-->
+<!--                  <a href="#" class="main__name&#45;&#45;country"-->
+<!--                    >Vysokie Tatry, Slowakia</a-->
+<!--                  >-->
+<!--                </figcaption>-->
+<!--              </figure>-->
 
-              <figure class="main__germany col-m-4">
-                <img
-                  src="./images/png/hostel_friendship.png"
-                  alt="hostel_friendship"
-                />
-                <figcaption class="main__name--img">
-                  <a href="#" class="nav__link--country"> Hostel Friendship</a>
-                  <a href="#" class="main__name--country"> Berlin, Germany</a>
-                </figcaption>
-              </figure>
+<!--              <figure class="main__germany main__homes&#45;&#45;element col-m-4">-->
+<!--                <img-->
+<!--                  src="./images/png/hostel_friendship.png"-->
+<!--                  alt="hostel_friendship"-->
+<!--                />-->
+<!--                <figcaption class="main__name&#45;&#45;img">-->
+<!--                  <a href="#" class="nav__link&#45;&#45;country"> Hostel Friendship</a>-->
+<!--                  <a href="#" class="main__name&#45;&#45;country"> Berlin, Germany</a>-->
+<!--                </figcaption>-->
+<!--              </figure>-->
 
               <div class="main__homes--button">
                 <button class="btn button__switch--homes">
@@ -659,5 +659,6 @@
         </p>
       </div>
     </footer>
+  <script src="js/main.js"></script>
   </body>
 </html>
