--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,7 @@
             </div>
             <div class="header__icon--account">
               <svg class="icon__account">
-                <use
-                  xlink:href="./images/sprite/sprite.svg#account_circle"
-                ></use>
+                <use xlink:href="./images/sprite/sprite.svg#account_circle"></use>
               </svg>
             </div>
 
@@ -116,10 +114,7 @@
                 name="people-room"
                 required
               />
-              <label
-                class="input__group--label label__people"
-                for="people-room"
-              >
+              <label class="input__group--label label__people" for="people-room">
                 2 Adults &#8212; 0 Children &#8212; 1 Room</label
               >
             </div>
@@ -162,9 +157,7 @@
               <div class="main__communication col-3 col-m-6 col-s-12">
                 <a href="#">
                   <svg class="icon__offer">
-                    <use
-                      xlink:href="./images/sprite/sprite.svg#communication"
-                    ></use>
+                    <use xlink:href="./images/sprite/sprite.svg#communication"></use>
                   </svg>
                 </a>
 
@@ -200,50 +193,6 @@
             </div>
 
             <div class="main__homes--hotel">
-<!--              <figure class="main__russia main__homes&#45;&#45;element col-s-6 col-m-4">-->
-<!--                <img src="./images/png/hotel_leopold.png" alt="hotel_leopold" />-->
-<!--                <figcaption class="main__name&#45;&#45;img">-->
-<!--                  <a href="#" class="nav__link&#45;&#45;country">Hotel Leopold</a>-->
-<!--                  <a href="#" class="main__name&#45;&#45;country"-->
-<!--                    >Saint Petersburg, Russia</a-->
-<!--                  >-->
-<!--                </figcaption>-->
-<!--              </figure>-->
-
-<!--              <figure class="main__spain&#45;&#45;homes main__homes&#45;&#45;element col-s-6 col-m-4">-->
-<!--                <img-->
-<!--                  src="./images/png/apartment_sunshine.png"-->
-<!--                  alt="apartment_sunshine"-->
-<!--                />-->
-<!--                <figcaption class="main__name&#45;&#45;img">-->
-<!--                  <a href="#" class="nav__link&#45;&#45;country"> Apartment Sunshine</a>-->
-<!--                  <a href="#" class="main__name&#45;&#45;country">-->
-<!--                    Santa Cruz de Tenerife, Spain</a-->
-<!--                  >-->
-<!--                </figcaption>-->
-<!--              </figure>-->
-
-<!--              <figure class="main__slowakia main__homes&#45;&#45;element col-m-4">-->
-<!--                <img src="./images/png/villa_kunerad.png" alt="villa_kunerad" />-->
-<!--                <figcaption class="main__name&#45;&#45;img">-->
-<!--                  <a href="#" class="nav__link&#45;&#45;country">Villa Kunerad</a>-->
-<!--                  <a href="#" class="main__name&#45;&#45;country"-->
-<!--                    >Vysokie Tatry, Slowakia</a-->
-<!--                  >-->
-<!--                </figcaption>-->
-<!--              </figure>-->
-
-<!--              <figure class="main__germany main__homes&#45;&#45;element col-m-4">-->
-<!--                <img-->
-<!--                  src="./images/png/hostel_friendship.png"-->
-<!--                  alt="hostel_friendship"-->
-<!--                />-->
-<!--                <figcaption class="main__name&#45;&#45;img">-->
-<!--                  <a href="#" class="nav__link&#45;&#45;country"> Hostel Friendship</a>-->
-<!--                  <a href="#" class="main__name&#45;&#45;country"> Berlin, Germany</a>-->
-<!--                </figcaption>-->
-<!--              </figure>-->
-
               <div class="main__homes--button">
                 <button class="btn button__switch--homes">
                   <svg class="icon__arrow--homes">
@@ -265,19 +214,13 @@
             <div class="buttons">
               <button class="btn btn__destinations">Regions</button>
               <button class="btn btn__destinations">Cities</button>
-              <button class="btn btn__destinations">
-                Places <span>of interest</span>
-              </button>
+              <button class="btn btn__destinations">Places <span>of interest</span></button>
             </div>
 
             <div class="main__destinations--parts col-12">
               <figure class="main__maldives col-3 col-m-6 col-s-12">
                 <div class="wrapper__destinations__img">
-                  <img
-                    class="destinations__img"
-                    src="./images/svg/maldives.svg"
-                    alt="maldives"
-                  />
+                  <img class="destinations__img" src="./images/svg/maldives.svg" alt="maldives" />
                   <div class="destinations__button--book">
                     <button class="btn button__book">Book now</button>
                   </div>
@@ -289,11 +232,7 @@
 
               <figure class="main__spain col-3 col-m-6 col-s-12">
                 <div class="wrapper__destinations__img">
-                  <img
-                    class="destinations__img"
-                    src="./images/svg/spain.svg"
-                    alt="spain"
-                  />
+                  <img class="destinations__img" src="./images/svg/spain.svg" alt="spain" />
                   <div class="destinations__button--book">
                     <button class="btn button__book">Book now</button>
                   </div>
@@ -305,11 +244,7 @@
 
               <figure class="main__norway col-3 col-m-6 col-s-12">
                 <div class="wrapper__destinations__img">
-                  <img
-                    class="destinations__img"
-                    src="./images/svg/norway.svg"
-                    alt="norway"
-                  />
+                  <img class="destinations__img" src="./images/svg/norway.svg" alt="norway" />
                   <div class="destinations__button--book">
                     <button class="btn button__book">Book now</button>
                   </div>
@@ -321,11 +256,7 @@
 
               <figure class="main__island col-3 col-m-6 col-s-12">
                 <div class="wrapper__destinations__img">
-                  <img
-                    class="destinations__img"
-                    src="./images/svg/island.svg"
-                    alt="island"
-                  />
+                  <img class="destinations__img" src="./images/svg/island.svg" alt="island" />
                   <div class="destinations__button--book">
                     <button class="btn button__book">Book now</button>
                   </div>
@@ -356,9 +287,7 @@
             </div>
 
             <div class="main__sign--content">
-              <h3 class="discount">
-                Sign up and get 20% off your first booking
-              </h3>
+              <h3 class="discount">Sign up and get 20% off your first booking</h3>
               <div class="main__sign--button">
                 <button class="btn button__sign">Sign up</button>
               </div>
@@ -385,11 +314,7 @@
               <div class="main__bali--parts">
                 <figure class="main__bali">
                   <div class="wrapper__price">
-                    <img
-                      class="reviews__img"
-                      src="./images/svg/bali.svg"
-                      alt="bali"
-                    />
+                    <img class="reviews__img" src="./images/svg/bali.svg" alt="bali" />
                     <div class="wrapper__name">
                       <div class="main__name--img">From 250 USD</div>
                     </div>
@@ -410,9 +335,7 @@
 
                   <div class="main__person">
                     <svg class="icon__person">
-                      <use
-                        xlink:href="./images/sprite/sprite.svg#account_circle"
-                      ></use>
+                      <use xlink:href="./images/sprite/sprite.svg#account_circle"></use>
                     </svg>
                     <div class="main__person--content">
                       <div class="person__name">Hanna Ivanova</div>
@@ -426,10 +349,9 @@
                   </div>
 
                   <div class="person__review">
-                    Great location, really pleasant and clean rooms, but the
-                    thing that makes this such a good place to stay are the
-                    staff. All of the people are incredibly helpful and generous
-                    with their time and advice.
+                    Great location, really pleasant and clean rooms, but the thing that makes this
+                    such a good place to stay are the staff. All of the people are incredibly
+                    helpful and generous with their time and advice.
                   </div>
                 </div>
 
@@ -444,11 +366,7 @@
               <div class="main__rotterdam--parts">
                 <figure class="main__rotterdam">
                   <div class="wrapper__price">
-                    <img
-                      class="reviews__img"
-                      src="./images/svg/rotterdam.svg"
-                      alt="rotterdam"
-                    />
+                    <img class="reviews__img" src="./images/svg/rotterdam.svg" alt="rotterdam" />
                     <div class="wrapper__name">
                       <div class="main__name--img">From 40 USD</div>
                     </div>
@@ -459,9 +377,7 @@
                   <div class="wrapper__place">
                     <div class="name">
                       <div class="main__name--hotel">King Kong Hostel</div>
-                      <div class="main__name--place">
-                        Rotterdam, Netherlands
-                      </div>
+                      <div class="main__name--place">Rotterdam, Netherlands</div>
                     </div>
                     <div class="score">
                       <div class="score__points">8,9</div>
@@ -471,9 +387,7 @@
 
                   <div class="main__person">
                     <svg class="icon__person">
-                      <use
-                        xlink:href="./images/sprite/sprite.svg#account_circle"
-                      ></use>
+                      <use xlink:href="./images/sprite/sprite.svg#account_circle"></use>
                     </svg>
                     <div class="main__person--content">
                       <div class="person__name">Adam Smith</div>
@@ -487,10 +401,9 @@
                   </div>
 
                   <div class="person__review">
-                    I've been in this hostel for a month and here is the best
-                    hostel of all Excellent management of excellent and ethical
-                    staff and bedrooms Bathrooms are always clean and excellent
-                    Most importantly, those who work here are kind and
+                    I've been in this hostel for a month and here is the best hostel of all
+                    Excellent management of excellent and ethical staff and bedrooms Bathrooms are
+                    always clean and excellent Most importantly, those who work here are kind and
                     good-natured.
                   </div>
                 </div>
@@ -499,11 +412,7 @@
               <div class="main__ourika--parts">
                 <figure class="main__ourika">
                   <div class="wrapper__price">
-                    <img
-                      class="reviews__img"
-                      src="./images/svg/ourika.svg"
-                      alt="ourika"
-                    />
+                    <img class="reviews__img" src="./images/svg/ourika.svg" alt="ourika" />
                     <div class="wrapper__name">
                       <div class="main__name--img">From 100 USD</div>
                     </div>
@@ -525,9 +434,7 @@
 
                   <div class="main__person">
                     <svg class="icon__person">
-                      <use
-                        xlink:href="./images/sprite/sprite.svg#account_circle"
-                      ></use>
+                      <use xlink:href="./images/sprite/sprite.svg#account_circle"></use>
                     </svg>
 
                     <div class="main__person--content">
@@ -542,11 +449,9 @@
                   </div>
 
                   <div class="person__review">
-                    Efficient, friendly, professional, and appropriately
-                    attentive. Great hotel in a great location. Easy access to
-                    all the surrounding historical sites. Staff is fantastic.
-                    Will definitely stay at this location during my next stay in
-                    Marocco.
+                    Efficient, friendly, professional, and appropriately attentive. Great hotel in a
+                    great location. Easy access to all the surrounding historical sites. Staff is
+                    fantastic. Will definitely stay at this location during my next stay in Marocco.
                   </div>
                 </div>
               </div>
@@ -575,16 +480,12 @@
           <div class="main__app--logo">
             <a href="#">
               <svg class="icon__logo--app">
-                <use
-                  xlink:href="./images/sprite/sprite.svg#logo_vector--app"
-                ></use>
+                <use xlink:href="./images/sprite/sprite.svg#logo_vector--app"></use>
               </svg>
             </a>
           </div>
 
-          <h3 class="main__app--content">
-            Sign up in the app and get 20% off your first booking
-          </h3>
+          <h3 class="main__app--content">Sign up in the app and get 20% off your first booking</h3>
 
           <div class="main__app--install">
             <button class="btn button__install">Install</button>
@@ -644,9 +545,7 @@
                 <a class="footer__nav--link" href="#">Support</a>
               </li>
               <li class="nav__item footer__item">
-                <a class="footer__nav--link" href="#"
-                  >Contact Customer Service</a
-                >
+                <a class="footer__nav--link" href="#">Contact Customer Service</a>
               </li>
               <li class="nav__item footer__item">
                 <a class="footer__nav--link" href="#">FAQ</a>
@@ -654,11 +553,9 @@
             </ul>
           </nav>
         </div>
-        <p class="footer__copyright">
-          &#169; 2020 Triphouse, Inc. All rights reserved
-        </p>
+        <p class="footer__copyright">&#169; 2020 Triphouse, Inc. All rights reserved</p>
       </div>
     </footer>
-  <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
