--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <!--        <script type="module" src="lesson-8 part2.js"></script>-->
     <!-- <script type="module" src="knowledge-check part1.js"></script> -->
     <!-- <script type="module" src="knowledge-check part2.js"></script> -->
-    <script type="module" src="lesson-9.js"></script>
+    <script type="module" src="src/js/lesson-9.js"></script>
   </body>
 </html>
