--- a/src/index.html
+++ b/src/index.html
@@ -556,6 +556,6 @@
         <p class="footer__copyright">&#169; 2020 Triphouse, Inc. All rights reserved</p>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
