fixed click select

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                     What is the age of the child you’re travelling with?
                   </div>
                   <div class="wrapper__select">
-                    <select class="filter__select">1</select>
+<!--                    <select class="filter__select"></select>-->
                   </div>
 
                 </div>
