--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
                 type="search"
                 id="city"
                 name="city"
+                autocomplete="off"
               />
               <label class="input__group--label label__city" for="city">
                 Your destination or hotel name
@@ -109,6 +110,7 @@
                 type="text"
                 id="people-room"
                 name="people-room"
+                autocomplete="off"
               />
               <label class="input__group--label label__people" for="people-room">
                 2 Adults &#8212; 0 Children &#8212; 1 Room</label
@@ -136,10 +138,7 @@
                   <div class="filter__age">
                     What is the age of the child you’re travelling with?
                   </div>
-                  <div class="wrapper__select">
-<!--                    <select class="filter__select"></select>-->
-                  </div>
-
+                  <div class="wrapper__select"></div>
                 </div>
               </div>
             </div>
