--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,9 @@
             </div>
 
             <div class="container__forms--third">
+              <div class="add__input add__first"></div>
+               <div class="add__input add__second"></div>
+              <div class="add__input add__third"></div>
               <input
                 class="input__group--input header__choice--people"
                 type="text"
@@ -120,7 +123,7 @@
                   <p class="filter__name">Adults</p>
                   <p class="btn__filter--minus">-</p>
                   <p class="filter__counter">0</p>
-                  <p class="btn__filter--plus thirty">+</p>
+                  <p class="btn__filter--plus thirty__adults">+</p>
                 </div>
                 <div class="filter__item">
                   <p class="filter__name">Children</p>
@@ -132,7 +135,7 @@
                   <p class="filter__name">Rooms</p>
                   <p class="btn__filter--minus">-</p>
                   <p class="filter__counter">0</p>
-                  <p class="btn__filter--plus thirty">+</p>
+                  <p class="btn__filter--plus thirty__rooms">+</p>
                 </div>
                 <div class="wrapper__children--inf">
                   <div class="filter__age">
