--- a/src/index.html
+++ b/src/index.html
@@ -574,7 +574,8 @@
         <p class="footer__copyright">&#169; 2020 Triphouse, Inc. All rights reserved</p>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+<!--    <script src="js/index.js"></script>-->
     <script src="js/lesson-11.js"></script>
+    <script src="js/lesson-12.js"></script>
   </body>
 </html>
