added html in js for click

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
 <main class="main">
   <div class="container main__container--free">
     <section class="main__free">
-      <div class="row">
+      <div class="row__free">
         <div class="main__title title_free">
           <h2>Available hotels</h2>
         </div>
@@ -587,7 +587,7 @@
 </footer>
 <!--    <script src="js/index.js"></script>-->
 <!--    <script src="js/lesson-11.js"></script>-->
-<!--    <script src="js/lesson-12.js"></script>-->
+    <script src="js/lesson-12.js"></script>
 <script src="js/lesson-13.js"></script>
 </body>
 </html>
