--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
         </div>
 
         <div class="container__forms--button">
-          <button class="btn header__button" type="button">Search</button>
+          <button class="btn header__button" type="reset">Search</button>
         </div>
       </form>
 
@@ -586,7 +586,7 @@
   </div>
 </footer>
 <!--    <script src="js/index.js"></script>-->
-<!--    <script src="js/lesson-11.js"></script>-->
+    <script src="js/lesson-11.js"></script>
     <script src="js/lesson-12.js"></script>
 <script src="js/lesson-13.js"></script>
 </body>
