--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p id="text1">Text 1</p>
     <p id="text2">Text 2</p>
     <p id="text3">Text 3</p>
+    <form></form>
 <!--    <script type="module" src="src/js/main.js"></script>-->
 <!--    <script type="module" src="src/js/lesson-4.js"></script>-->
 <!--    <script type="module" src="src/js/lesson-5.js"></script>-->
@@ -22,6 +23,7 @@
 <!--    <script type="module" src="src/js/lesson-8 part2.js"></script>-->
 <!--    <script type="module" src="src/js/knowledge-check part1.js"></script>-->
 <!--    <script type="module" src="src/js/knowledge-check part2.js"></script>-->
+    <script src="src/js/lesson-15.js"></script>
     <script type="module" src="src/js/lesson-9.js"></script>
   </body>
 </html>
