--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <p id="text1">Text 1</p>
     <p id="text2">Text 2</p>
     <p id="text3">Text 3</p>
-    <form></form>
+    <form action="#" id="form">
+      <label for="file"></label>
+      <input id="file" name="file" type="file">
+      <button id="btn" type="submit">Отправить</button>
+    </form>
 <!--    <script type="module" src="src/js/main.js"></script>-->
 <!--    <script type="module" src="src/js/lesson-4.js"></script>-->
 <!--    <script type="module" src="src/js/lesson-5.js"></script>-->
