--- a/src/index.html
+++ b/src/index.html
@@ -588,8 +588,8 @@
     <!--    <script src="js/index.js"></script>-->
     <script src="js/lesson-11.js"></script>
 <!--    <script src="js/lesson-12.js"></script>-->
-<!--    <script src="js/lesson-13.js"></script>-->
-    <script src="js/lesson-14.js"></script>
+    <script type="module" src="js/lesson-13.js"></script>
+    <script type="module" src="js/lesson-14.js"></script>
 
   </body>
 </html>
