--- a/src/index.html
+++ b/src/index.html
@@ -590,6 +590,7 @@
 <!--    <script src="js/lesson-12.js"></script>-->
     <script type="module" src="js/lesson-13.js"></script>
     <script type="module" src="js/lesson-14.js"></script>
+    <script type="module" src="js/lesson-16.js"></script>
 
   </body>
 </html>
