--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
       <input id="file" name="file" type="file">
       <button id="btn" type="submit">Отправить</button>
     </form>
-<!--    <script type="module" src="src/js/main.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-4.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-5.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-6.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-7.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-8 part1.js"></script>-->
-<!--    <script type="module" src="src/js/lesson-8 part2.js"></script>-->
-<!--    <script type="module" src="src/js/knowledge-check part1.js"></script>-->
-<!--    <script type="module" src="src/js/knowledge-check part2.js"></script>-->
-    <script src="src/js/lesson-15.js"></script>
-    <script type="module" src="src/js/lesson-9.js"></script>
+<!--    <script type="module" src="src/js/homeworks//first_task.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-4.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-5.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-6.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-7.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-8 part1.js"></script>-->
+<!--    <script type="module" src="src/js/homeworks//lesson-8 part2.js"></script>-->
+    <script type="module" src="src/js/homeworks//knowledge-check part1.js"></script>
+    <script type="module" src="src/js/homeworks//knowledge-check part2.js"></script>
+    <script src="src/js/homeworks/lesson-15.js"></script>
+    <script type="module" src="src/js/homeworks/lesson-9.js"></script>
   </body>
 </html>
