--- a/src/index.html
+++ b/src/index.html
@@ -168,9 +168,7 @@
             <div class="main__title title_free">
               <h2>Available hotels</h2>
             </div>
-            <div class="main__free--hotel">
-
-            </div>
+            <div class="main__free--hotel"></div>
           </div>
         </section>
       </div>
@@ -585,12 +583,6 @@
         <p class="footer__copyright">&#169; 2020 Triphouse, Inc. All rights reserved</p>
       </div>
     </footer>
-    <!--    <script src="js/index.js"></script>-->
-    <script src="js/lesson-11.js"></script>
-<!--    <script src="js/lesson-12.js"></script>-->
-<!--    <script type="module" src="js/lesson-13.js"></script>-->
-    <script type="module" src="js/lesson-14.js"></script>
-    <script type="module" src="js/lesson-16.js"></script>
-
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
